test/preprocessor/invalid/version-old.glsl
#version 110 es // Forbidden when version < 150
